<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Personal_Info">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/green">
            </View>

            <TextView
                android:id="@+id/personalinfoone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info"
                android:textStyle="bold"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="cursive"
                android:padding="20dp">
            </TextView>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/myphoto"
                android:background="@drawable/inro"
                android:contentDescription="@string/personal_info">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailsofme"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:padding="10dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicProfiles"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="5dp">

            </TextView>
            <Button
                android:id="@+id/btn_Git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/git"
                android:drawableEnd="@drawable/baseline_arrow_outward_24"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/fadeblue"
                >

            </Button>

            <Button
                android:id="@+id/btn_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/linkedin"
                android:drawableEnd="@drawable/baseline_arrow_outward_24"
                android:textStyle="bold"
                android:background="@color/fadeblue"
                android:padding="5dp"
                >

            </Button>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>